<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FlipAR</string>
    <string name="catalog_name">Catalog</string>
    <string name="listing_name">Listing</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <!-- app labels -->
    <string name="arapp_title">FlipAR</string>
    <string name="add_to_cart_label">Add to Cart</string>
    <string name="checkout">Checkout</string>
    <string name="no_data">No item is selected for cart till now</string>
    <string name="product_image">Product Image</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="title">Title</string>
    <string name="price">Price</string>
	<!-- categories -->
	<string name="cat_watches_label">Watches</string>
	<string name="cat_shades_label">Shades</string>
	<string name="cat_shoes_label">Shoes</string>
	<string name="cat_jewelry_label">Jewelry</string>
	<string name="cat_tshirt_label">TShirts</string>
	<!-- colors -->
    <color name="background">#3500ffff</color>
</resources>
