<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="30dip"
    android:background="@color/background"    
    tools:context="com.fk.arapp.Home" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dip"
        android:text="@string/arapp_title"
        android:textSize="25sp"/>
    
    <Button
        android:id="@+id/cat_watches_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
       	android:text="@string/cat_watches_label"/>
    <Button
        android:id="@+id/cat_shades_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
       	android:text="@string/cat_shades_label"/>
    <Button
        android:id="@+id/cat_shoes_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
       	android:text="@string/cat_shoes_label"/>

</LinearLayout>
